--- a/firstTryDaniel.html
+++ b/firstTryDaniel.html
@@ -3,13 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>	
-	<script src="lib/processing-1.3.6.js" type="text/javascript"></script>
+	<script src="lib/jquery-1.7.2.js" type="text/javascript"></script>
 	
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 <body>
-	<canvas id="pjs" datasrc="firstTryDaniel.pde"></canvas>
 </body>
 </html>
