--- a/firstTryDaniel.html
+++ b/firstTryDaniel.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title></title>	
+	<title>Tetris</title>	
 	<script src="lib/jquery-1.7.2.js" type="text/javascript"></script>
+    <script src="javascritps/tetris.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="stylesheets">
 	
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
