--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<title>Tetris</title>	
-	<script src="lib/jquery-1.7.2.js" type="text/javascript"></script>
+	<script src="lib/jquery.js" type="text/javascript"></script>
     <script src="javascripts/tetris.js" type="text/javascript"></script>
     <link rel="stylesheet" href="stylesheets/common.css">
 	
