--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,7 @@ var twoDimList = [
 var matrix = new Matrix(twoDimList);
 
 test("Create a matrix", function() {
-	ok(!(matrix instanceof String), "The created matrix was found to be ");
+	ok(!(matrix instanceof String), "The created matrix was found to be.");
 	ok(matrix instanceof Matrix, "The created matrix was not a Matrix object.");
 });
 
