--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
 	<title>Tetris</title>	
 	<script src="lib/jquery.js" type="text/javascript"></script>
+	<script type="text/javascript" src="lib/jquery-css-transform.js"></script>
+	<script type="text/javascript" src="lib/jquery-animate-css-rotate-scale.js"></script>
     <script src="javascripts/tetris.js" type="text/javascript"></script>
     <link rel="stylesheet" href="stylesheets/common.css">
 	
@@ -14,6 +16,6 @@
 <body>
     <h1>TetrisJS</h1>
     <input id="startstop" type="button" value="start"/><br/>
-    <div id='gamearea'></div>
+    <div id="gamearea"></div>
 </body>
 </html>
