--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<script type="text/javascript" src="lib/jquery-css-transform.js"></script>
 	<script type="text/javascript" src="lib/jquery-animate-css-rotate-scale.js"></script>
     <script src="javascripts/tetris.js" type="text/javascript"></script>
-    <script src="javascripts/debug.js" type="text/javascript"></script>
     <link rel="stylesheet" href="stylesheets/common.css">
 	
 	<!--[if lt IE 9]>
@@ -18,5 +17,7 @@
     <h1>TetrisJS</h1>
     <input id="startstop" type="button" value="start"/><br/>
     <div id="gamearea"></div>
+    <div id="debug">
+    <p></p></div>
 </body>
 </html>
