--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 	<![endif]-->
 </head>
 <body>
-    <h1>TetrisJS</h1>
-    <input id="startstop" type="button" value="start"/><br/>
-    <div id="gamearea"></div>
-    <div id="debug">
-    <p></p></div>
+    <div id="wrapper" class="clearfix">
+        <h1>TetrisJS<img src="img/title.png"></h1>
+        <div id="side">
+            <input id="startstop" type="button" value="start"/>
+        </div>
+        <div id="gamearea"></div>
+        <div id="debug">
+        </div>
+    </div>
 </body>
 </html>
