Split classes into separate files

--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="qunit.js"></script>
 <script type="text/javascript" src="../javascripts/tetris.js"></script>
+<script type="text/javascript" src="../javascripts/Point.js"></script>
+<script type="text/javascript" src="../javascripts/GameArea.js"></script>
+<script type="text/javascript" src="../javascripts/Matrix.js"></script>
+<script type="text/javascript" src="../javascripts/TetrisBlock.js"></script>
+<script type="text/javascript" src="../javascripts/Mess.js"></script>
 
   <script>
   $(document).ready(function(){
