--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 	<script src="lib/jquery.js" type="text/javascript"></script>
 	<script type="text/javascript" src="lib/jquery-css-transform.js"></script>
 	<script type="text/javascript" src="lib/jquery-animate-css-rotate-scale.js"></script>
-    <script src="javascripts/tetris.js" type="text/javascript"></script>
+	
+	<script src="javascripts/GameArea.js" type="text/javascript"></script>
+	<script src="javascripts/Point.js" type="text/javascript"></script>
+	<script src="javascripts/Controller.js" type="text/javascript"></script>
+	<script src="javascripts/Matrix.js" type="text/javascript"></script>
+	<script src="javascripts/Mess.js" type="text/javascript"></script>
+	<script src="javascripts/PointView.js" type="text/javascript"></script>
+	<script src="javascripts/TetrisBlock.js" type="text/javascript"></script>
+	<script src="javascripts/tetris.js" type="text/javascript"></script>
+    
     <link rel="stylesheet" href="stylesheets/common.css">
 	
 	<!--[if lt IE 9]>
