--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="javascripts/Matrix.js" type="text/javascript"></script>
 	<script src="javascripts/Mess.js" type="text/javascript"></script>
 	<script src="javascripts/PointView.js" type="text/javascript"></script>
+	<script src="javascripts/PointClusterView.js" type="text/javascript"></script>
 	<script src="javascripts/BlockView.js" type="text/javascript"></script>
 	<script src="javascripts/TetrisBlock.js" type="text/javascript"></script>
 	<script src="javascripts/tetris.js" type="text/javascript"></script>
