Fixed row deletion bug and introduced a gray color bug instead...

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="javascripts/PointView.js" type="text/javascript"></script>
 	<script src="javascripts/PointClusterView.js" type="text/javascript"></script>
 	<script src="javascripts/BlockView.js" type="text/javascript"></script>
+	<script src="javascripts/MessView.js" type="text/javascript"></script>
 	<script src="javascripts/TetrisBlock.js" type="text/javascript"></script>
 	<script src="javascripts/tetris.js" type="text/javascript"></script>
     
